--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
@@ -1,9 +1,29 @@
 @import "~less/variables";
 
-@sw-media-preview-play-button-size:                 50%;
-@sw-media-preview-play-button-z-index:              50;
+@sw-media-preview-play-button-size:    35px;
+@sw-media-preview-play-button-z-index: 50;
+@sw-media-preview-border-color:        @color-steam-cloud;
+@sw-media-preview-border-color-highlighted: @color-shopware-blue;
+@sw-media-preview-border-radius:       @border-radius-default;
 
 .sw-media-preview {
+    position: relative;
+    border: 1px solid @sw-media-preview-border-color;
+    border-radius: @sw-media-preview-border-radius;
+
+    &.sw-media-preview--highlighted {
+        border: 1px solid @sw-media-preview-border-color-highlighted;
+    }
+
+    &.sw-media-preview--shows-transparency {
+        background: url('../img/sw-media-background.png');
+    }
+
+    &:after {
+        content: "";
+        display: block;
+        padding-bottom: 75%;
+    }
 
     .sw-media-preview__item {
         max-width: 100%;
