--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -2,7 +2,7 @@
 @import "~less/mixins";
 
 @sw-media-grid-item-color-selected:          @color-shopware-blue;
-@sw-media-grid-item-pseudo-padding:          15px;
+@sw-media-grid-item-pseudo-padding:          10px;
 @sw-media-grid-item-border-radius:           @border-radius-default;
 
 @sw-media-grid-item-color-border:            @color-steam-cloud;
@@ -12,38 +12,35 @@
 @sw-media-grid-item-preview-aspect-ratio: 75%;
 
 .sw-media-grid-item {
-    position: relative;
+    overflow: hidden;
+    padding: 10px;
+    width: 100%;
     border-color: @sw-media-grid-item-color-border;
 
     &.is--selected {
         color: @sw-media-grid-item-color-selected;
-
-        .sw-media-grid-item__preview {
-            border: 1px solid @sw-media-grid-item-color-selected;
-        }
 
         .sw-media-grid-item__content.is--list {
             border: 1px solid @sw-media-grid-item-color-selected;
         }
     }
 
+    .sw-context-button {
+        button.is--active, button:hover {
+            border: none;
+            color: #293647;
+        }
+
+        .sw-icon {
+            width: 15px;
+        }
+    }
+
     .sw-media-grid-item__content.is--grid {
-        padding: 10px;
-
-        .sw-media-grid-item__preview {
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
-
-        .sw-media-grid-item__preview:after {
-            content: "";
-            display: block;
-            padding-bottom: @sw-media-grid-item-preview-aspect-ratio;
-        }
+        position: relative;
 
         .sw-media-grid-item__name-container {
-            margin: 10px 0;
+            margin-top: 10px;
 
             input[type="text"] {
                 text-align: center;
@@ -51,7 +48,7 @@
             }
         }
 
-        .sw-media-grid-item__context-button {
+        .sw-context-button {
             position: absolute;
             top: @sw-media-grid-item-pseudo-padding;
             right: @sw-media-grid-item-pseudo-padding;
@@ -71,30 +68,22 @@
         margin: 0 5px;
         display: grid;
 
-        grid-template-columns: 45px minmax(60px, 1fr);
-        grid-template-rows: 50% 50%;
+        grid-template-columns: 60px minmax(60px, 1fr);
         grid-auto-flow: column;
         align-items: end;
 
-        .sw-media-grid-item__preview {
+        .sw-media-preview {
             width:  40px;
             height: 40px;
+            justify-self: center;
             grid-row-start: 1;
             grid-row-end: 3;
         }
 
-        .sw-media-grid-item__context-button {
-            justify-self: right;
+        .sw-context-button {
             grid-row-start: 1;
             grid-row-end: 3;
-            display: inline;
         }
-    }
-
-    .sw-media-grid-item__preview {
-        position: relative;
-        border: 1px solid @sw-media-grid-item-color-border;
-        border-radius: @sw-media-grid-item-border-radius;
     }
 
     .sw-media-grid-item__name-container {
