--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
@@ -8,18 +8,36 @@
                         <div class="sw-media-grid__content-cell"
                              v-for="item in items"
                              :key="item.key" >
-                            <component
-                                :is="previewComponent"
-                                :selected="isItemSelected(item)"
-                                :item="item"
-                                :containerOptions="containerOptions"
-                                @sw-media-grid-item-selection-add="handleSelection"
-                                @sw-media-grid-item-clicked="mediaItemClicked"
-                                @sw-media-grid-item-play="mediaItemPlayed"
-                                @sw-media-grid-item-selection-remove="removeFromSelection"
-                                v-on="$listeners"
-                                :showContextMenuButton="showContextMenuButton">
-                            </component>
+                            {% block sw_media_grid_grid_item_components %}
+                                {% block sw_media_grid_media_item_component %}
+                                    <sw-media-grid-media-item
+                                        v-if="item.type === 'media'"
+                                        :selected="isItemSelected(item)"
+                                        :item="item"
+                                        :containerOptions="containerOptions"
+                                        :showContextMenuButton="showContextMenuButton"
+                                        @sw-media-grid-item-selection-add="handleSelection"
+                                        @sw-media-grid-item-clicked="mediaItemClicked"
+                                        @sw-media-grid-item-play="mediaItemPlayed"
+                                        @sw-media-grid-item-selection-remove="removeFromSelection"
+                                        v-on="$listeners">
+                                    </sw-media-grid-media-item>
+                                {% endblock %}
+
+                                {% block sw_media_grid_catalog_item_component %}
+                                    <sw-media-grid-catalog-item
+                                        v-if="item.type === 'catalog'"
+                                        :containerOptions="containerOptions"
+                                        :selected="isItemSelected(item)"
+                                        :item="item"
+                                        @sw-media-grid-item-selection-add="handleSelection"
+                                        @sw-media-grid-item-clicked="mediaItemClicked"
+                                        @sw-media-grid-item-play="mediaItemPlayed"
+                                        @sw-media-grid-item-selection-remove="removeFromSelection"
+                                        v-on="$listeners">
+                                    </sw-media-grid-catalog-item>
+                                {% endblock %}
+                            {% endblock %}
                         </div>
                     {% endblock %}
                 </div>
