NEXT-833 Made the any-link styling valid for firefox & chrome

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -24,7 +24,7 @@
         grid-template-columns: 50% 50%;
     }
 
-    a:-webkit-any-link {
+    a:any-link {
         color: inherit;
         text-decoration: none;
     }
