--- a/Resources/administration/src/app/component/base/sw-image/sw-image.html.twig
+++ b/Resources/administration/src/app/component/base/sw-image/sw-image.html.twig
@@ -1,5 +1,6 @@
 {% block sw_image %}
-    <div class="sw-image" :class="swImageClasses">
+<div class="sw-image" :class="swImageClasses">
+    <template v-if="!isPlaceholder">
         {% block sw_product_media_item_image %}
             <img class="sw-image__image" :src="url" :alt="altText">
         {% endblock %}
@@ -7,10 +8,21 @@
             <div class="sw-image__tooltip">{{ altText }}</div>
         {% endblock %}
         <sw-context-button class="sw-image__context-button">
-            {% block sw_product_media_item_contex %}
-                <sw-context-menu-item v-if="!isCover" @click="$emit('sw-image-cover')">{{ $tc('sw-image.context.buttonAsCover') }}</sw-context-menu-item>
-                <sw-context-menu-item variant="danger" @click="$emit('sw-image-delete')">{{ $tc('sw-image.context.buttonDelete') }}</sw-context-menu-item>
+            {% block sw_product_media_item_context %}
+                {% block sw_product_media_item_context_cover_action %}
+                    <sw-context-menu-item v-if="!isCover" @click="$emit('sw-image-cover')">{{ $tc('sw-image.context.buttonAsCover') }}</sw-context-menu-item>
+                {% endblock %}
+
+                {% block sw_product_media_item_context_delete_action %}
+                    <sw-context-menu-item variant="danger" @click="$emit('sw-image-delete')">{{ $tc('sw-image.context.buttonDelete') }}</sw-context-menu-item>
+                {% endblock %}
             {% endblock %}
         </sw-context-button>
-    </div>
+    </template>
+    <template v-else>
+        {% block sw_product_media_item_placeholder %}
+            <sw-icon class="sw-image__placeholder-icon" :name="'default-object-image'" :small="true"></sw-icon>
+        {% endblock %}
+    </template>
+</div>
 {% endblock %}
