--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -14,8 +14,7 @@
     }
 
     .sw-media-quickinfo__collapse-content {
-        padding: 0 25px;
-        margin-top: 16px;
+        padding: 25px;
     }
 
     .sw-media-quickinfo__two-columns {
@@ -31,7 +30,6 @@
 
     .sw-media-quickinfo__quickaction {
         cursor: pointer;
-        border-radius: 4px;
         margin-bottom: 16px;
 
         &:hover {
@@ -42,21 +40,5 @@
     .sw-media-quickinfo__quickactions-icon {
         color: @sw-media-quickinfo-icon-color;
         margin-right: 20px;
-    }
-
-    .sw-media-quickinfo__preview {
-        position: relative;
-        margin: 10px 0;
-        border: 1px solid @sw-media-quickinfo-border-color;
-        border-radius: @sw-media-quickinfo-border-radius;
-    }
-
-    .sw-media-quickinfo__image {
-        max-width: 100%;
-        max-height: 100%;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
     }
 }
