--- a/Resources/administration/src/module/sw-media/component/sw-media-collapse/sw-media-collapse.less
+++ b/Resources/administration/src/module/sw-media/component/sw-media-collapse/sw-media-collapse.less
@@ -9,7 +9,7 @@
         display: grid;
         grid-template-columns: auto 24px;
 
-        padding: 16px 25px;
+        padding: 0px 25px 16px 25px;
         color: @color-quickinfo-header;
         border-bottom: 1px solid @color-quickinfo-collapse-divider;
     }
