--- a/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.less
+++ b/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.less
@@ -70,6 +70,7 @@
             .sw-field__select {
                 select {
                     padding: 2px 12px;
+                    height: 33px;
                 }
 
                 .sw-icon {
