NEXT-833 Fixed sorting selector in firefox

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -66,6 +66,7 @@
                 select {
                     min-width: 200px;
                     padding: 2px 12px;
+                    height: 33px;
                 }
 
                 .sw-icon {
