ntr - small css fixes

--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -71,10 +71,10 @@
         margin: 0 5px;
         display: grid;
 
-        grid-template-columns: 60px minmax(60px, 1fr);
+        grid-template-columns: 45px minmax(60px, 1fr);
         grid-template-rows: 50% 50%;
         grid-auto-flow: column;
-        align-items: center;
+        align-items: end;
 
         .sw-media-grid-item__preview {
             width:  40px;
