--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
@@ -1,6 +1,6 @@
 @import "~less/variables";
 
-@sw-media-preview-play-button-size:                 35px;
+@sw-media-preview-play-button-size:                 50%;
 @sw-media-preview-play-button-z-index:              50;
 
 .sw-media-preview {
