--- a/Resources/administration/src/app/component/base/sw-sidebar-item/sw-sidebar-item.less
+++ b/Resources/administration/src/app/component/base/sw-sidebar-item/sw-sidebar-item.less
@@ -13,18 +13,26 @@
         position: absolute;
         z-index: @sw-sidebar-z-index;
         right: 64px;
-        width: 400px;
+        width: 30%;
+        min-width: 356px;
+        max-width: 400px;
         top: 0; bottom: 0;
         border-left: 1px solid @sw-sidebar-color-border;
-        overflow: hidden;
+        overflow-y: auto;
         background: #fff;
-        padding: 25px;
+        padding:0 25px;
     }
 
     .sw-sidebar-item__headline {
         display: grid;
         grid-template-columns: auto 64px;
+        position: sticky;
+        top: 0px;
+        background-color: #fff;
+        margin: 0 -25px;
+        padding: 25px 25px 0;
     }
+
 
     .sw-sidebar-item__title {
         font-size: 18px;
