--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
@@ -1,5 +1,5 @@
 {% block sw_media_preview %}
-    <div class="sw-media-preview" :class="imageBackgroundClass">
+    <div class="sw-media-preview" :class="mediaPreviewClasses">
         {% block sw_media_preview_file_type_check %}
             <template v-if="checkForFileTypeImage">
                 {% block sw_media_preview_file_type_image %}
