--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -9,13 +9,8 @@
 @sw-media-grid-item-color-text-inline-input: @color-gutenberg;
 @sw-media-grid-item-color-details:           @color-gutenberg;
 
-@sw-media-grid-item-preview-aspect-ratio: 75%;
-
 .sw-media-grid-item {
-    overflow: hidden;
     padding: 10px;
-    width: 100%;
-    border-color: @sw-media-grid-item-color-border;
 
     &.is--selected {
         color: @sw-media-grid-item-color-selected;
@@ -41,11 +36,7 @@
 
         .sw-media-grid-item__name-container {
             margin-top: 10px;
-
-            input[type="text"] {
-                text-align: center;
-                width: 100%;
-            }
+            text-align: center;
         }
 
         .sw-context-button {
@@ -64,46 +55,13 @@
     .sw-media-grid-item__content.is--list {
         border: 1px solid @sw-media-grid-item-color-border;
         border-radius: @sw-media-grid-item-border-radius;
-        padding: 2px 5px;
+        padding: 2px 0;
         margin: 0 5px;
         display: grid;
 
-        grid-template-columns: 60px minmax(60px, 1fr);
+        grid-template-columns: 50px minmax(60px, 1fr);
         grid-auto-flow: column;
-        align-items: end;
-
-        .sw-media-preview {
-            width:  40px;
-            height: 40px;
-            justify-self: center;
-            grid-row-start: 1;
-            grid-row-end: 3;
-        }
-
-        .sw-context-button {
-            grid-row-start: 1;
-            grid-row-end: 3;
-        }
-    }
-
-    .sw-media-grid-item__name-container {
-        input[type="text"] {
-            outline: none;
-            -webkit-appearance: none;
-            color: inherit;
-            background-color: inherit;
-
-            border-radius: @sw-media-grid-item-border-radius;
-            border: 1px solid transparent;
-            padding: 0 5px;
-            line-height: 2;
-        }
-
-        input[type="text"]:focus {
-            border: 1px solid @sw-media-grid-item-color-border;
-            color: black;
-            background-color: @color-white;
-        }
+        align-items: center;
     }
 
     .sw-media-grid-item__name {
