NTR - fix rendering hight

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -26,7 +26,7 @@
 
     .sw-media-catalog__content {
         display: grid;
-        grid-template-rows: auto;
+        grid-template-rows: 64px 1fr 64px;
         position:absolute;
         height: 100%;
         width: 100%;
