--- a/Resources/administration/src/module/sw-catalog/page/sw-catalog-detail/sw-catalog-detail.html.twig
+++ b/Resources/administration/src/module/sw-catalog/page/sw-catalog-detail/sw-catalog-detail.html.twig
@@ -146,7 +146,7 @@
 
                                                         {% block sw_catalog_detail_categories_tree_items_item_actions_default %}
                                                             <template v-else>
-                                                                <sw-context-button>
+                                                                <sw-context-button class="sw-catalog-detail__add-button">
                                                                     {% block sw_catalog_detail_categories_tree_items_item_actions_add_child %}
                                                                         <sw-context-menu-item icon="small-documentation-map-closed"
                                                                                               :disabled="currentEditCategory !== null"
