--- a/Resources/administration/src/app/component/media/sw-media-grid-catalog-item/sw-media-grid-catalog-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-catalog-item/sw-media-grid-catalog-item.html.twig
@@ -5,8 +5,7 @@
         <sw-icon class="sw-media-grid-item__catalog-item"
             name="folder-thumbnail"
             multicolor
-            size="64px"
-        >
+            size="64px">
         </sw-icon>
     </div>
 {% endblock %}
