--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
@@ -19,6 +19,12 @@
         background: url('../img/sw-media-background.png');
     }
 
+    &.is--icon {
+        .sw-media-preview__item {
+            transform: translate(-50%, -50%) scale(0.7);
+        }
+    }
+
     &:after {
         content: "";
         display: block;
