--- a/Resources/administration/src/app/component/media/sw-media-grid-catalog-item/sw-media-grid-catalog-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-catalog-item/sw-media-grid-catalog-item.html.twig
@@ -12,7 +12,7 @@
 
 {% block sw_media_grid_item_context_items%}
     {% block sw_media_grid_catalog_item_show_content_button %}
-        <sw-context-menu-item :routerLink="{ name: 'sw.media.catalog-content', params: { id: item.id } }">
+        <sw-context-menu-item :routerLink="{ name: 'sw.media.catalog-content', params: { id: item.id }, query: {limit: 25, page: 1} }">
             {{ $tc('sw-media.catalogItem.showCatalogContent') }}
         </sw-context-menu-item>
     {% endblock %}
