NTR - disable inline editing

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -134,7 +134,7 @@
                                             class="sw-media-catalog__media-grid"
                                             :previewType="previewType"
                                             :selectable="true"
-                                            :editable="true"
+                                            :editable="false"
                                             :items="mediaItems"
                                             ref="mediaGrid"
                                             v-on="mediaMediaGridListener"
