--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -32,7 +32,7 @@
 
                                 {% block sw_media_index_items_grid %}
                                     <sw-media-grid previewType="media-grid-preview-as-grid"
-                                           :editable="true"
+                                           :editable="false"
                                            :selectable="true"
                                            :items="mediaItems"
                                            ref="mediaGrid"
