--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -55,7 +55,7 @@
     .sw-media-grid-item__content.is--list {
         border: 1px solid @sw-media-grid-item-color-border;
         border-radius: @sw-media-grid-item-border-radius;
-        padding: 2px 0;
+        padding: 2px;
         margin: 0 5px;
         display: grid;
 
