NTR - fix context button closes sidebar on click

--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
@@ -9,7 +9,7 @@
 
     .sw-media-index__content {
         padding-left: 20px;
-        padding-top: 30px;
+        padding-top: 50px;
         justify-self: stretch;
         overflow-x: hidden;
         overflow-y: auto;
@@ -18,11 +18,12 @@
     .sw-media-index__divider {
         border: 0;
         height: 1px;
-        margin: 30px 10px 30px 10px;
+        margin: 18px 10px 18px 10px;
         background: @color-steam-cloud;
     }
 
     .sw-media-index__headline {
         margin-left: 10px;
+        margin-bottom: 15px;
     }
 }
