NTR - Fix sw-grid select all checkbox

--- a/Resources/administration/src/app/component/grid/sw-grid/sw-grid.html.twig
+++ b/Resources/administration/src/app/component/grid/sw-grid/sw-grid.html.twig
@@ -10,7 +10,7 @@
                                 {% block sw_grid_slot_header_cell_selectable %}
                                     <div class="sw-grid-column" v-if="selectable">
                                         <div class="sw-grid__cell-content">
-                                            <sw-field type="checkbox" @change="selectAll"></sw-field>
+                                            <sw-field type="checkbox" v-model="allSelectedChecked" @change="selectAll"></sw-field>
                                         </div>
                                     </div>
                                 {% endblock %}
