--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -138,5 +138,10 @@
         border-radius: @sw-media-catalog-border-radius-slider-container;
         background-color: @sw-media-catalog-background-color-slider-container;
     }
+
+    .sw-media-catalog__sw-pagination {
+        background: #f4f7fa;
+        border-top: 1px solid #D8DDE6;;
+    }
 }
 
