NTR - fix vertical styling in metadata

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-metadata-item/sw-media-quickinfo-metadata-item.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-metadata-item/sw-media-quickinfo-metadata-item.less
@@ -8,6 +8,7 @@
 .sw-media-quickinfo-metadata-item {
     display: grid;
     grid-template-columns: 50% 50%;
+    grid-auto-rows: 40px;
 
     > dt {
         color: @color-gutenberg;
