NTR - replace color with var

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -140,8 +140,8 @@
     }
 
     .sw-media-catalog__sw-pagination {
-        background: #f4f7fa;
-        border-top: 1px solid #D8DDE6;;
+        background: @color-light-gray;
+        border-top: 1px solid @color-steam-cloud;
     }
 }
 
